--- a/src/app/admin/all-flayers/home-gardens/home-gardens.component.html
+++ b/src/app/admin/all-flayers/home-gardens/home-gardens.component.html
@@ -1,5 +1,6 @@
-<input #box (keyup.enter)="onKey(box.value)" (blur)="onKey(box.value);box.value=''">
-<button (click)="onKey(box.value)">add</button>
-<ul>
-  <li *ngFor="let t of values">{{t}}</li>
-</ul>
+<div class="main-content">
+    <p>The hero's birthday is {{birthday|date:"fullDate"}}</p>
+    <h6>{{name |uppercase}}</h6>
+</div>
+
+
