--- a/src/styles.css
+++ b/src/styles.css
@@ -19,9 +19,7 @@ body {
 .header-content h4{font-size: 23px;padding-top: 8px}
 .content-tagName{color:#898989;font-size: 16px}
 .content-tagName-2{color:#000000}
-.input-searchBy{width: 238px;height: 44px;background-color: #f7f5f5;border: none;padding-left: 60px;
-
-}
+.input-searchBy{width: 238px;height: 44px;background-color: #f7f5f5;border: none;padding-left: 60px;}
 ::placeholder {color: rgba(0, 0, 0, 0.8);opacity: 0.8;font-size: 15px;}
 
 .search-wrapper {position: relative;}
@@ -37,6 +35,7 @@ body {
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+
   /* CSS for the Mat Tables */
 
 .main-content{margin:20px 23px;}
@@ -45,7 +44,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
  /*CSS fro the Main-Content*/
 
  .main-content section{border-radius: 5px;background-color: #ffffff;}
-.main-content section h5{padding: 19px;font-size: 19px;}
+.main-content section h5{padding: 16px 0px 11px 20px;font-size: 19px;}
 .main-content section .divider{border-bottom: 3px solid  #2cdc45;}
  .main-content section .input-full-width{width: 100%;}
  .main-content section .btn {color: rgba(0, 0, 0, 0.5);
@@ -77,10 +76,18 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .coupan-row p span{font-weight: bold;}
 .coupan-row #coupanDetail{color: rgba(0, 0, 0, 0.7);opacity: 0.7;}
+            #coupanDetail.in-dialog{font-size: 18px;padding-right:10px;}
 .coupan-row #matchAt{font-size: 16px;color: #727272;color: #727272;}
 .coupan-row #matchAt span{font-weight: 600;color: #27c039;}
 
 .css-snack{font-size:28px;}
+
+/* Mat-Dialog */
+.mat-dialog-container {
+    padding: 0px !important;
+    overflow: visible !important;
+    border-radius:4px !important;
+}
 
  
   
